refactor: SonarLint S5778 수정 및 테스트 코드 스타일 정리
- assertThatThrownBy 람다 내 List.of() 호출을 변수로 추출 (S5778)
- S3PresignedUrlAdapter: PutObjectRequest 빌더 람다 스타일로 변경
- GeneratePresignedUrlServiceIntegrationTest: getFirst() 사용 및 체이닝 개선
- ShowcaseStepDefinitions: import 정리 및 Javadoc 줄바꿈 수정

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>